# fast_forwarder

./: pyproject.toml
app/: main.py
app/core/: config.py  db.py  middle_kafka.py  security.py
scripts/: format.sh  linit.sh
